[package]
name = "shuttle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blurz = "0.4.0"
lazy_static = "1.4.0"
ws = "0.9.2"
mouse_position="0.1.3"
serde = {version="1.0.152", features = ["derive"]}
serde_json = "1.0.93"